added upload of image and display

--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,7 +2,7 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-        picture_file:
+        url_file:
             uri_prefix: /uploads/pictures/
             upload_destination: '%upload_directory%/pictures'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
