added fixtures for tech used per projects and card display and project title

--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -20,3 +20,10 @@ liip_imagine:
                   {
                       dim: [300, 300]
                   }
+
+        home_project:
+            quality: 75
+            filters:
+                thumbnail:
+                    size: [800, 500]
+                    mode: outbound
